# printalyzer-uvdensitometer

./: README.md
docs/: assembly.md  protocol.md
docs/cube/: uvdensitometer.ioc  uvdensitometer.txt
enclosure/: enclosure.md
enclosure/models_2d/: stage-plate-ring.dxf
enclosure/models_3d/: dens-base-cover.3mf  dens-base-cover.stl  dens-base.3mf  dens-base.stl  dens-enclosure.f3z  dens-main-cover.3mf  dens-main-cover.stl  dens-main-housing.3mf  dens-main-housing.stl  dens-model.step  diffuser-spacer.3mf  diffuser-spacer.stl  filter-stack-holder.3mf  filter-stack-holder.stl  filter-stack-lower-ring.3mf  filter-stack-lower-ring.stl  filter-stack-upper-ring.3mf  filter-stack-upper-ring.stl  jig-cal-t2120-center.3mf  jig-cal-t2120-center.stl  jig-cal-t2120-side.3mf  jig-cal-t2120-side.stl  jig-cal-t5100-full.3mf  jig-cal-t5100-full.stl  jig-cal-t5100-labeled.3mf  jig-cal-t5100-labeled.stl  lower-filter-ring.3mf  lower-filter-ring.stl  upper-filter-ring.3mf  upper-filter-ring.stl
hardware/: Makefile
hardware/main-board/: kikit-panelize.json  main-board-buttons.kicad_sch  main-board-panelize.json  main-board-sensor.kicad_sch  main-board.kicad_pcb  main-board.kicad_prl  main-board.kicad_pro  main-board.kicad_sch
hardware/trans-led-al-board/: trans-led-al-board.kicad_pcb  trans-led-al-board.kicad_prl  trans-led-al-board.kicad_pro  trans-led-al-board.kicad_sch
hardware/trans-led-board/: kikit-panelize.json  sym-lib-table  trans-led-board-panelize.json  trans-led-board.kicad_pcb  trans-led-board.kicad_prl  trans-led-board.kicad_pro  trans-led-board.kicad_sch
software/: LICENSE
software/bootloader/: .cproject  .project  CMakeLists.txt  STM32L072KZTX_FLASH.ld
software/bootloader/src/: app_descriptor.h  board.c  board.h  board_api.h  ghostfat.c  msc.c  uf2.h  usb_descriptors.c
software/desktop/: densitometer.pro
software/desktop/src/: calibrationbaselinetab.cpp  calibrationbaselinetab.h  calibrationbaselinetab.ui  calibrationtab.cpp  calibrationtab.h  calibrationuvvistab.cpp  calibrationuvvistab.h  calibrationuvvistab.ui  denscalvalues.cpp  denscalvalues.h  denscommand.h  densinterface.cpp  densinterface.h  diagnosticstab.cpp  diagnosticstab.h  diagnosticstab.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotecontroldialog.cpp  remotecontroldialog.h  remotecontroldialog.ui  slopecalibrationdialog.cpp  slopecalibrationdialog.h  slopecalibrationdialog.ui
software/firmware/: .cproject  .gitignore  .project  CMakeLists.txt  STM32L072KZTX_FLASH.ld  makefile.defs  makefile.targets
software/firmware/src/: FreeRTOSConfig.h  app_descriptor.c  app_descriptor.h  board_config.h  cdc_handler.c  cdc_handler.h  densitometer.c  densitometer.h  display.c  display.h  display_assets.c  display_assets.h  display_segments.c  display_segments.h  hid_handler.c  keypad.c  light.c  light.h  main.c  mcp9808.c  mcp9808.h  sensor.c  sensor.h  settings.c  settings.h  state_controller.c  state_controller.h  state_display.c  state_display.h  state_main_menu.c  state_measure.c  state_measure.h  state_remote.c  task_main.c  task_sensor.c  task_sensor.h  task_usbd.c  tsl2585.c  tsl2585.h  usb_descriptors.c
software/firmware/src/system/: startup_stm32l072kztx.s  stm32l0xx_hal_msp.c  stm32l0xx_hal_timebase_tim.c  stm32l0xx_it.c  stm32l0xx_it.h  syscalls.c  system_stm32l0xx.c
software/tools/: checksum.pl
